--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "os": "^0.1.1"
   },
   "devDependencies": {},
   "scripts": {
